syntax = "proto3";

option csharp_namespace = "Shop.Protos";

package product;

//import "google/protobuf/empty.proto";
//import "google/api/annotations.proto";
service Product {
	rpc SendProduct (RequestProduct) returns(ResponseProduct) {
		//option(google.api.http) = {
		//	post : "/api/product"
		//};
	};
}

message RequestProduct {
	string title = 1;
	double price = 2;
}

message ResponseProduct {
	string message = 1;
}
